--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 </head>
 <body>
     <h1>Chào mừng đến với ứng dụng CI/CD trên AWS!</h1>
+    <h2>Hello mimi của anh</h1>
     <p>Đây là một ứng dụng demo được triển khai qua CodePipeline.</p>
 </body>
 </html>
